--- a/PdfExtraction.Tests/PdfExtraction.Tests.csproj
+++ b/PdfExtraction.Tests/PdfExtraction.Tests.csproj
@@ -55,7 +55,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="Resources\sampleTypewriter.pdf" />
+    <None Include="Resources\sampleTypewriter.pdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
