Updated testing csproj

--- a/PdfExtraction.Tests/PdfExtraction.Tests.csproj
+++ b/PdfExtraction.Tests/PdfExtraction.Tests.csproj
@@ -57,7 +57,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Resources\sampleTypewriter.pdf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
