--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,4 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/PdfExtraction.Tests/Resources/output_admin_TxwonKC25RKDYeD.PDF
