--- a/PdfExtraction/packages.config
+++ b/PdfExtraction/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="NuGet.CommandLine" version="4.3.0" targetFramework="net461" developmentDependency="true" />
   <package id="PDFsharp" version="1.50.4619-beta4c" targetFramework="net461" />
 </packages>
